# cicada-satana

./: .env  bot.py  channel_users.txt  convert_tdata.py  db.db  fff.py  gggg.txt  pro.py  pyproject.toml  report.py  requests.txt  spam.txt  ussers.txt
handlers/users/: admin.py  chats.py  general.py  report.py
keyboards/inline/: menu.py
spam/: spam.txt
tdatas/79646389140/: ENGLISH-Instructions_in_English.txt  Инструкция.txt
tdatas/79646389140/tdata/: 4A8A61BE1F784106s  5A0CFE58F88324A7s  D877F783D5D3EF8Cs  key_datas  settingss  shortcuts-default.json  usertag
tdatas/79646389140/tdata/D877F783D5D3EF8C/: configs  maps
tdatas/79646389140/tdata/user_data/cache/0/: binlog
tdatas/79646389140/tdata/user_data/cache/0/30/: 77DEDE854437
tdatas/79646389140/tdata/user_data/media_cache/0/: binlog
temp_aka/: telega.rar
